--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -1,21 +1,18 @@
 <div id="footer">
 	<div class="inner">
-		<div id="footer-info">Version: {constant(TODOYU_VERSION)}</div>
-		<div id="footer-logo"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" /></div>
+		<div id="footer-line"></div>
+		<div id="footer-info">
+			Version: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
+			<a href="http://www.todoyu.com/de/community/forum/" target="_blank">Report a bug to the community</a><br />
+			Documentation: <a href="http://www.todoyu.com/de/doc/user/" target="_blank">User</a> | <a href="http://www.todoyu.com/de/doc/api/" target="_blank">API</a>
+		</div>
+		<div id="footer-logo">
+			<a href="http://www.todoyu.com" target="_blank"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" border="0" /></a>
+		</div>
 		<div id="footer-address">
 			<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/" target="_blank">snowflake productions gmbh</a><br />
 			<a href="mailto:feedback@todoyu.com">feedback@todoyu.com</a><br />
 			<a href="http://www.todoyu.com/" target="_blank">www.todoyu.com</a>
 		</div>
 	</div>
-	{*
-	<div class="line"><hr size="1" /></div>
-	<div class="address">
-		<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong> by</a>
-		<a href="http://www.snowflake.ch/" target="_blank">snowflake productions gmbh</a>, Telefon +41 44 455 80 80, <a href="mailto:feedback@todoyu.com">feedback@todoyu.com</a>,
-		<a href="http://www.todoyu.com/" target="_blank">www.todoyu.com
-			<span class="logo"><img src="core/assets/img/logo.png" alt="todoyu" width="85" height="60" /></span>
-		</a>
-	</div>
-	*}
 </div>
