--- a/core/assets/css/layout.css
+++ b/core/assets/css/layout.css
@@ -168,12 +168,11 @@ body {
 #footer {
 	display:block;
 	position: relative;
-	width: 100%;
-	height: 100px;
+	width:100%;
+	height:70px;
 	text-align:left;
 	margin-top:50px;
-	border-top:2px solid #CCC;
-	padding-top:10px;
+	padding-top:20px;
 }
 
 #footer .inner {
@@ -188,14 +187,24 @@ body {
 
 #footer-logo {
 	float:left;
-	width:200px;
+	width:140px;
 	text-align:center;
 }
 
 #footer-address {
 	float:right;
-	width:340px;
+	width:400px;
 	text-align:right;
+}
+
+#footer-line {
+	display:block;
+	position: absolute;
+	top:0px;
+	left:0;
+	width:100%;
+	height:5px;
+	background: #B0D026 url('../img/bg_footer.jpg') repeat-y 0 top;
 }
 
 
