* fixed quicktask wizard label * fixed CSS bug

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -164,7 +164,7 @@ div.fElement {
 			padding-right:0;
 			padding-left:0;
 			margin-left:41%;
-		} typeDatabaseRelation
+		}
 
 	.typeDatabaseRelation {}
 
