* fixed bug in task edit form worktype labels rendering * various minor cleanups

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -227,7 +227,7 @@ fieldset.noneFloatingInput div.fElement .fLabel {
 
 
 /* ---------------------------------------
-	Old css ... @todo Check and remove
+	Old CSS ... @todo Check and remove
    ---------------------------------------*/
 
 .selectScrollbarHide {
