--- a/core/view/form/FormElement_Button.tmpl
+++ b/core/view/form/FormElement_Button.tmpl
@@ -1,5 +1,13 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<button class="{$inputClass} {$class}" type="{$type}" name="{$htmlName}" id="{$htmlId}" {if $onclick}onclick="{$onclick}"{/if}{if $title}title="{$title}"{/if}><span{if $hasIconClass} class="{$hasIconClass}"{/if}>{$text}</span><span class="rgt"></span></button>
+
+<button class="button {$inputClass} {$class}" type="{$type}" name="{$htmlName}" id="{$htmlId}" {if $onclick}onclick="{$onclick}"{/if} {if $title}title="{Label $title}"{/if}>
+	{if ! $noIcon}
+		<span class="icon"></span>
+	{/if}
+	<span class="label">{Label $text}</span>
+	<span class="rgt"></span>
+</button>
+
 {/block}
