--- a/install/view/adminpassword.tmpl
+++ b/install/view/adminpassword.tmpl
@@ -1,20 +1,22 @@
 {extends main.tmpl}
 
 {block name="box"}
-<h1>{$title}</h1>
-<p>Change admin password for your security!</p>
-<form method="post">
-	<table width="500" border="0" cellspacing="0" cellpadding="3">
-      <tr>
-        <td width="90">Username</td>
-        <td width="398">admin</td>
-      </tr>
-      <tr>
-        <td>Password</td>
-        <td><input type="text" name="password" id="password" /></td>
-      </tr>
-    </table>
-	  <input type="submit" value="Change admin password">
-	  <input type="hidden" name="action" value="setadminpassword">
-</form>
+<h1><span class="title">{$title}</span><span class="rgt"></span></h1>
+<div class="blockcontent">
+	<p class="{$textClass}">{$text}</p>
+	<form method="post">
+		<table width="500" border="0" cellspacing="0" cellpadding="3">
+	      <tr>
+	        <td width="90">Username</td>
+	        <td width="398">admin</td>
+	      </tr>
+	      <tr>
+	        <td>Password</td>
+	        <td><input type="text" name="password" id="password" /></td>
+	      </tr>
+	    </table>
+		  <input type="submit" value="Change admin password">
+		  <input type="hidden" name="action" value="setadminpassword">
+	</form>
+</div>
 {/block}
