--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -1,15 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Todoyu Installer</title>
-<link href="assets/style.css" rel="stylesheet" type="text/css" />
-<script language="javascript" type="text/javascript" src="assets/scripts.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Todoyu Installer</title>
+	<link href="assets/style.css" rel="stylesheet" type="text/css" />
+	<script language="javascript" type="text/javascript" src="assets/scripts.js"></script>
 </head>
 
-<body>
-<div id="box">
-{block name="box"}{/block}
-</div>
-</body>
+	<body>
+		<div id="box">
+			<div id="panel">
+				{include "panel.tmpl"}
+			</div>
+			<div id="contentBox">
+				<span class="lt"></span>
+				<span class="rt"></span>
+				<span class="lb"></span>
+				<span class="rb"></span>
+				<div class="content">
+					<div class="boxContent">
+						{block name="box"}{/block}
+					</div>
+					<div id="footer">
+						{include "footer.tmpl"}
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
