--- a/install/assets/style.css
+++ b/install/assets/style.css
@@ -2,14 +2,137 @@ body {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
 	color:#000000;
-	margin-top:50px;
 	background-color:#E3EACE;
 }
 
 #box {
-	width:600px;
-	margin:50px auto;
-	padding:20px;
+	position: relative;
+	clear: both;
+	padding: 0 0 80px;
+	height: auto !important;
+	min-height: 415px;
+	padding: 1px 2px 0 3px;
+	width: 973px !important;
+	background-color: #E3EACE;
+	margin: 0 auto;
+
+}
+
+#contentBox {
+	top: 20px;
+	float: left;
+	position: relative;
+	width: 680px;
+	background-color: #fff;
+}
+
+		#contentBox span.lt,
+		#contentBox span.rt,
+		#contentBox span.lb,
+		#contentBox span.rb,
+		.content span.lt,
+		.content span.rt,
+		.content span.lb,
+		.content span.rb {
+			display:block;
+			position:absolute;
+			width:13px;
+			height:13px;
+			background-color:transparent;
+			background-image:url('img/col3_r13.png');
+			background-repeat:no-repeat;
+			background-position:0 0;
+		}
+
+		.content span.lt, #contentBox span.lt {top:0;left:0;}
+		.content span.rt, #contentBox span.rt {top:0;right:0;background-position:100% 0;}
+		.content span.lb, #contentBox span.lb {bottom:0;left:0;background-position:0 100%;}
+		.content span.rb, #contentBox span.rb {bottom:0;right:0;background-position:100% 100%;}
+
+.content {
+	margin: 8px;
+	padding: 1px;
+}
+
+.content .boxContent {
+	background-color: #E3EACE;
+}
+
+.content .boxContent .blockcontent {
+	padding: 10px;
+}
+
+.content .boxContent .blockcontent p.text{
+	padding: 5px;
+	border: 1px solid #000;
+	margin: 5px;
+}
+
+.content .boxContent .blockcontent p.textError{
+	border-color: red;
+	background-color: #FDC5C5;
+}
+
+.content .boxContent .blockcontent p.textInfo{
+	border-color: #FFA800;
+	background-color: #FDEEC3;
+}
+
+.content .boxContent .blockcontent p.textSuccess{
+	border-color: #048E01;
+	background-color: #96F384;
+}
+
+#panel {
+	clear: both;
+	float: left;
+	margin: 0 10px 0 0;
+	padding: 0;
+	position: relative;
+	top: 20px;
+	width: 270px;
+	background-color:#fff;
+}
+
+#panel .panelFooter {
+	height:51px;
+	margin-top:-2px;
+	background:#E3EACE url('img/panel_footer.png') no-repeat 0 0;
+}
+
+#footer {
 	border:1px solid #D3DABB;
 	background-color:#EDF1E0;
+	clear:both;
+	margin-top:20px;
+	margin-bottom:10px;
+	padding:15px;
+}
+
+h1 {
+	background: transparent url('img/bg_headerline.png') no-repeat 0 0;
+	height: 28px;
+	margin-top: 5px;
+	position: relative;
+	text-align: left;
+	width: 100%;
+}
+
+h1 span.title {
+	float: left;
+	line-height: 28px;
+	margin: 0 0 0 5px;
+	text-transform:uppercase;
+	font-size:10px;
+	letter-spacing:0.3px;
+}
+
+h1 span.rgt {
+	background: #fff url('img/bg_headerline.png') no-repeat scroll 100% 0;
+	height: 28px;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	right: 0;
+	width: 10px;
 }
