--- a/install/view/importstatic.tmpl
+++ b/install/view/importstatic.tmpl
@@ -1,10 +1,12 @@
 {extends main.tmpl}
 
 {block name="box"}
-<h1>{$title}</h1>
-<p>DB connection is stored, import static data now.</p>
-<form method="post">
-	<input type="submit" value="Import static database data">
-	<input type="hidden" name="action" value="importstatic">
-</form>
+<h1><span class="title">{$title}</span><span class="rgt"></span></h1>
+<div class="blockcontent">
+	<p  class="text textSuccess">DB connection is stored, import static data now.</p>
+	<form method="post">
+		<input type="submit" value="Import static database data">
+		<input type="hidden" name="action" value="importstatic">
+	</form>
+</div>
 {/block}
