--- a/install/view/welcome.tmpl
+++ b/install/view/welcome.tmpl
@@ -1,10 +1,12 @@
 {extends main.tmpl}
 
 {block name="box"}
-<h1>{$title}</h1>
-<p>{$text}</p>
-<form method="post">
-	<input type="submit" value="Check server compatibility">
-	<input type="hidden" name="action" value="start">
-</form>
+<h1><span class="title">{$title}</span><span class="rgt"></span></h1>
+<div class="blockcontent">
+	<p class="{$textclass}">{$text}</p>
+	<form method="post">
+		<input type="submit" value="Check server compatibility">
+		<input type="hidden" name="action" value="start">
+	</form>
+</div>
 {/block}
