* more installer improvements

--- a/install/view/adminpassword.tmpl
+++ b/install/view/adminpassword.tmpl
@@ -12,11 +12,18 @@
 	      </tr>
 	      <tr>
 	        <td>Password</td>
-	        <td><input type="text" name="password" id="password" /></td>
+	        <td><input type="password" name="password" id="password" /></td>
+	      </tr>
+	      <tr>
+	        <td>Confirm Password</td>
+	        <td><input type="password" name="password_confirm" id="password_confirm" /></td>
 	      </tr>
 	    </table>
-		  <input type="submit" value="Change admin password">
-		  <input type="hidden" name="action" value="setadminpassword">
+		<button type="submit">
+			<span class="label">Change admin password</span>
+			<span class="rgt"></span>
+		</button>
+		<input type="hidden" name="action" value="setadminpassword">
 	</form>
 </div>
 {/block}
