--- a/install/view/dbconnection.tmpl
+++ b/install/view/dbconnection.tmpl
@@ -19,7 +19,10 @@
 	        <td><input type="password" name="password" id="password" value="{$fields.password}" /></td>
 	      </tr>
 	    </table>
-	<input type="submit" value="Save connection data">
+		<button type="submit">
+			<span class="label">Save connection data</span>
+			<span class="rgt"></span>
+		</button>
 		<input type="hidden" name="action" value="dbconnection">
 	</form>
 <div class="blockcontent">
