--- a/install/view/dbselect.tmpl
+++ b/install/view/dbselect.tmpl
@@ -21,7 +21,10 @@
 	       	</td>
 	      </tr>
 	    </table>
-	<input type="submit" value="Select Database">
+		<button type="submit">
+			<span class="label">Select Database</span>
+			<span class="rgt"></span>
+		</button>
 		<input type="hidden" name="action" value="dbselect">
 	</form>
 <div class="blockcontent">
