--- a/install/view/finish.tmpl
+++ b/install/view/finish.tmpl
@@ -5,7 +5,10 @@
 <div class="blockcontent">
 	<p  class="text textSuccess">Installation finished</p>
 	<form method="post">
-		<input type="submit" value="Disable installer and go to login">
+		<button type="submit">
+			<span class="label">Disable installer and go to login</span>
+			<span class="rgt"></span>
+		</button>
 		<input type="hidden" name="action" value="finish">
 	</form>
 </div>
