--- a/install/view/importstatic.tmpl
+++ b/install/view/importstatic.tmpl
@@ -5,7 +5,10 @@
 <div class="blockcontent">
 	<p  class="text textSuccess">DB connection is stored, import static data now.</p>
 	<form method="post">
-		<input type="submit" value="Import static database data">
+		<button type="submit">
+			<span class="label">Import static database data</span>
+			<span class="rgt"></span>
+		</button>
 		<input type="hidden" name="action" value="importstatic">
 	</form>
 </div>
