--- a/install/view/welcome.tmpl
+++ b/install/view/welcome.tmpl
@@ -5,7 +5,10 @@
 <div class="blockcontent">
 	<p class="{$textclass}">{$text}</p>
 	<form method="post">
-		<input type="submit" value="Check server compatibility">
+		<button type="submit">
+			<span class="label">Check server compatibility</span>
+			<span class="rgt"></span>
+		</button>
 		<input type="hidden" name="action" value="start">
 	</form>
 </div>
