--- a/install/assets/style.css
+++ b/install/assets/style.css
@@ -104,8 +104,7 @@ body {
 	border:1px solid #D3DABB;
 	background-color:#EDF1E0;
 	clear:both;
-	margin-top:20px;
-	margin-bottom:10px;
+	margin: 20px 8px 10px 8px;
 	padding:15px;
 }
 
@@ -136,3 +135,41 @@ h1 span.rgt {
 	right: 0;
 	width: 10px;
 }
+
+button {
+	background: url('img/bg_button.png') no-repeat 0 50%;
+	border: 0 none !important;
+	color: #000;
+	cursor: pointer;
+	padding: 0;
+	position: relative;
+}
+	button span {
+		color: #000;
+		float: left;
+		font-size: 11px;
+		line-height: 23px;
+		margin: 0;
+		padding: 0 0 0 13px;
+		white-space: nowrap;
+	}
+
+	button span.label {
+		margin-left: 10px;
+		margin-right: 3px;
+		padding: 0;
+		white-space: nowrap;
+		text-transform:uppercase;
+	}
+
+	button span.rgt {
+		background-color: #d3dabb;
+		background: #E3EACE url('img/bg_button.png') no-repeat 100% 50%;
+		display: block;
+		height: 23px;
+		left: 3px;
+		margin: 0;
+		padding: 0;
+		position: relative;
+		width: 10px;
+	}
