--- a/install/view/adminpassword.tmpl
+++ b/install/view/adminpassword.tmpl
@@ -11,11 +11,11 @@
 	        <td width="398">admin</td>
 	      </tr>
 	      <tr>
-	        <td>Password</td>
+	        <td>Password *</td>
 	        <td><input type="password" name="password" id="password" /></td>
 	      </tr>
 	      <tr>
-	        <td>Confirm Password</td>
+	        <td>Confirm Password *</td>
 	        <td><input type="password" name="password_confirm" id="password_confirm" /></td>
 	      </tr>
 	    </table>
