--- a/install/view/dbselect.tmpl
+++ b/install/view/dbselect.tmpl
@@ -13,12 +13,12 @@
 	        		{foreach $options key option}
 	        			<option value="{$key}">{$option}</option>
 	        		{/foreach}
-	        	</select>
-
-	        	or create new:
-
-	        	<input type="text" id="database_new" name="database_new" />
+	        	</select>	 
 	       	</td>
+	      </tr>
+	      <tr>
+	      	<td>or create new:</td>
+	      	<td><input type="text" id="database_new" name="database_new" /></td>
 	      </tr>
 	    </table>
 		<button type="submit">
