--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -10,6 +10,7 @@
 	<body>
 		<div id="box">
 			<div id="panel">
+				{include "licence.tmpl"}
 				{include "panel.tmpl"}
 			</div>
 			<div id="contentBox">
