--- a/install/view/config.tmpl
+++ b/install/view/config.tmpl
@@ -9,11 +9,11 @@
 	<form method="post">
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 	      <tr>
-	        <td width="109">System Name</td>
+	        <td width="109">System Name *</td>
 	        <td width="379"><input name="systemname" type="text" id="systemname" value="{if $fields.server}{$fields.server}{else}Todoyu{/if}" /></td>
 	      </tr>
 	      <tr>
-	        <td>System Email</td>
+	        <td>System Email *</td>
 	        <td><input type="text" name="email" id="email" value="{$fields.username}" /></td>
 	      </tr>
 	      <tr>
