--- a/install/view/footer.tmpl
+++ b/install/view/footer.tmpl
@@ -1,7 +1,8 @@
-<br clear="all" />
 <div class="todoyuInfo" id="todoyu-info">
-<strong>todoyu.</strong> Copyright &copy; 2006-{date_format $update "%Y"} Snowflake Productions, Z&uuml;rich<br />
-Extensions are copyright of their respective owners. Go to <a href="http://www.todoyu.com" target="_blank" style="text-decoration:underline">todoyu.com</a> for details. todoyu comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.<br />
-Obstructing the appearance of this notice is prohibited by law.<br>
-Installed version: {$version}
+	<p>
+		<strong>todoyu.</strong> Copyright &copy; 2006-{date_format $version.versiondate "%Y"} Snowflake Productions, Z&uuml;rich<br />
+		Extensions are copyright of their respective owners. Go to <a href="http://www.todoyu.com" target="_blank" style="text-decoration:underline">todoyu.com</a> for details. todoyu comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.<br />
+		Obstructing the appearance of this notice is prohibited by law.<br>
+		Installed version: {$version.versionnumber} ({$version.versiondate})
+	</p>
 </div>
