--- a/install/view/servercheck.tmpl
+++ b/install/view/servercheck.tmpl
@@ -3,19 +3,33 @@
 {block name="box"}
 <h1><span class="title">{$title}</span><span class="rgt"></span></h1>
 <div class="blockcontent">
-	<table width="500" border="0" cellspacing="0" cellpadding="3">
+	<table width="500" border="0" cellspacing="0" cellpadding="5">
 	  <tr>
 	    <td width="148">PHP version &gt;= 5.2</td>
-	    <td width="340">{$phpversion}</td>
+	    <td width="200">{$phpversion}</td>
+	    <td width="150"><strong>{$phpversionStatus}</strong></td>
+	    <td>{if $phpversionStatus == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
 	  </tr>
 	  <tr>
 	    <td valign="top">Folder/files writable</td>
-	    <td>
-	    {foreach $writable file status}
-	    	- /{$file}: <strong>{if $status}writable{else}NOT WRITABLE{/if}</strong><br>
+	    {foreach $writable file status iteration}
+	    	 {if $.foreach.iteration.first}
+		    	 <td>- /{$file}: </td>
+		    	 <td><strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
+		    	 <td>{if $status == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
+	    	 </tr>
+	    	 {else}
+	    	 <tr>
+	    	 	<td></td>
+	    	 	<td>- /{$file}:</td>
+	    	 	<td> <strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
+	    	 	 <td>{if $status == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
+	    	 </tr>
+	    	 {/if}
+	    	 
 	    {/foreach}
-	    </td>
-	  </tr>
+	    
+	
 	</table>
 
 	{if $next}
