--- a/core/assets/css/layout.css
+++ b/core/assets/css/layout.css
@@ -65,7 +65,7 @@ body {
 		clear:both;
 		width:270px;
 		padding:0;
-		margin:0 10px 0 0;
+		margin:0 10px 50px 0;
 	}
 
 		#panel .inner {
@@ -167,6 +167,7 @@ body {
 
 #footer {
 	display:block;
+	clear:both;
 	position: relative;
 	width:100%;
 	height:70px;
