* fixed localizing inside title rendering of contact info types foreign records * changed comments inside DB data of installer into english * added holidays, holidaysets to installer DB data

--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -4,7 +4,9 @@
 
 <div id="foreignrecords-{$idRecord}-{$fieldname}" class="foreignRecords" >
 	<div class="foreignRecordsActionControll overflow">
-		<a onclick="Todoyu.Form.addRecord({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}"><span class="hidden">{Label form.icon.add}</span></a>
+		<a onclick="Todoyu.Form.addRecord({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}">
+			<span class="hidden">{Label form.icon.add}</span>
+		</a>
 	</div>
 	{foreach $records index record}
 		{include "core/view/form/FormElement_DatabaseRelation_Record.tmpl"}
