--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -100,11 +100,11 @@ ul#navi-main-list li ul li.last {
 }
 
 ul#navi-main-list li ul li a {
-	padding: 2px 10px 2px 14px;
+	padding: 2px 10px 2px 30px;
 	line-height: 20px;
 	font-size:10px;
 	font-weight:normal;
-	background-image:none;
+	/*background-image:none;*/
 }
 
 ul#navi-main-list li ul li a:hover {
