--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Todoyu Installer</title>
 	<link href="assets/style.css" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="../favicon.ico" />
 	<script language="javascript" type="text/javascript" src="assets/scripts.js"></script>
 </head>
 
