--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -113,6 +113,6 @@ ul#navi-main-list li ul li a:hover {
 
 
 /* Todoyu tab */
-#navi-main-list li.itemtodoyu {
+#navi-main-list li.itemTodoyu {
 	float:right;
 }
