--- a/core/view/form/FormElement_TextinputAC.tmpl
+++ b/core/view/form/FormElement_TextinputAC.tmpl
@@ -3,7 +3,7 @@
 {block name="field"}
 	<input type="text" id="{$htmlId}-fulltext" value="{$displayLabel}" class="{$inputClass} {$class}" {if $disabled}disabled="disabled"{/if} {$extraAttributes} />
 	<input type="hidden" name="{$htmlName}" id="{$htmlId}" value="{$default}" />
-	<div id="{$htmlId}-suggest" class="div-autocompletion"></div>
+	<div id="{$htmlId}-suggest" class="acResultContainer"></div>
 	<script type="text/javascript">
 		Todoyu.Autocomplete.install('{$htmlId}', {$acConfigJson});
 	</script>
