* fixed template bug in staff selector widget * refined filterpreset widget view for initial use (no presets stored yet) * re/moved some wrong locale entries

--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -134,6 +134,10 @@ h4 {
 	padding-right:1px;
 }
 
+.centered {
+	text-align:center;
+}
+
 .overflow {
 	overflow:auto !important;
 	overflow:inherit;
